--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.8.2",
+    "@fontsource-variable/onest": "^5.0.4",
     "astro": "^4.12.2",
     "typescript": "^5.5.2"
   }
